[gd_scene load_steps=9 format=3 uid="uid://cjwearovoxmh6"]

[ext_resource type="Script" path="res://scripts/world.gd" id="1_qpbir"]
[ext_resource type="PackedScene" uid="uid://efq2wqncwayo" path="res://scenes/player.tscn" id="2_kpaqy"]
[ext_resource type="PackedScene" uid="uid://b81nvsd43b12q" path="res://scenes/enemy.tscn" id="2_pk6pg"]
[ext_resource type="PackedScene" uid="uid://0fp52kiuhvxu" path="res://scenes/hub_palyer.tscn" id="4_f5yfj"]
[ext_resource type="PackedScene" uid="uid://c5gsvipypcawf" path="res://scenes/air_enemy.tscn" id="5_8lo86"]
[ext_resource type="PackedScene" uid="uid://bvx8xxv728ijx" path="res://scenes/plataform.tscn" id="5_s6w6x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pgjci"]
size = Vector2(185, 2000)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hg3f0"]
size = Vector2(1931.5, 463)

[node name="world" type="Node2D" node_paths=PackedStringArray("spawn_right", "spawn_left", "player", "spawn_air_left", "spawn_air_right")]
script = ExtResource("1_qpbir")
spawn_right = NodePath("spawn_right/spawn_right")
enemy = ExtResource("2_pk6pg")
air_enemy = ExtResource("5_8lo86")
spawn_left = NodePath("spawn_left/spawn_left")
player = NodePath("player")
spawn_air_left = NodePath("spawn_air_left")
spawn_air_right = NodePath("spawn_air_right")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="hub_palyer" parent="UI" instance=ExtResource("4_f5yfj")]
layout_mode = 1

[node name="spawn_right" type="StaticBody2D" parent="."]
collision_layer = 16
collision_mask = 258

[node name="collider" type="CollisionShape2D" parent="spawn_right"]
position = Vector2(1811, 76)
shape = SubResource("RectangleShape2D_pgjci")

[node name="spawn_right" type="Marker2D" parent="spawn_right"]
position = Vector2(1868, 901)

[node name="ColorRect" type="ColorRect" parent="spawn_right"]
offset_left = 1718.0
offset_top = 822.0
offset_right = 1906.0
offset_bottom = 974.0
color = Color(1, 0.0313726, 0.176471, 1)

[node name="spawn_left" type="StaticBody2D" parent="."]
collision_layer = 16
collision_mask = 258

[node name="collider" type="CollisionShape2D" parent="spawn_left"]
position = Vector2(65, 57)
shape = SubResource("RectangleShape2D_pgjci")

[node name="spawn_left" type="Marker2D" parent="spawn_left"]
position = Vector2(85, 915)

[node name="ColorRect" type="ColorRect" parent="spawn_left"]
offset_left = -28.0
offset_top = 839.0
offset_right = 160.0
offset_bottom = 991.0
color = Color(1, 0.0313726, 0.176471, 1)

[node name="floor" type="StaticBody2D" parent="."]
collision_mask = 270

[node name="sprite" type="ColorRect" parent="floor"]
offset_left = -25.0
offset_top = 975.0
offset_right = 1912.0
offset_bottom = 1087.0
color = Color(0.0235294, 0.411765, 0, 1)

[node name="collider" type="CollisionShape2D" parent="floor"]
position = Vector2(944.25, 1208.5)
shape = SubResource("RectangleShape2D_hg3f0")

[node name="player" parent="." instance=ExtResource("2_kpaqy")]
position = Vector2(872, 812)

[node name="plataform" parent="." instance=ExtResource("5_s6w6x")]
position = Vector2(295, 825)
collision_mask = 289

[node name="plataform3" parent="." instance=ExtResource("5_s6w6x")]
position = Vector2(1481, 825)
collision_mask = 289

[node name="plataform2" parent="." instance=ExtResource("5_s6w6x")]
position = Vector2(825, 825)
collision_mask = 289

[node name="timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="spawn_air_left" type="Marker2D" parent="."]
position = Vector2(228, -136)

[node name="spawn_air_right" type="Marker2D" parent="."]
position = Vector2(1611, -121)

[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
